--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,5 +8,5 @@ html, body {
     width: 100%;
     height: 100%;
     overflow-x: hidden;
-    background-color: #C0F8C2;
+    background-color: #E5FFE6;
 }
